--- a/src/style.css
+++ b/src/style.css
@@ -1,26 +1,3 @@
-.inn-btn-login {
-  -webkit-border-radius: 5;
-  -moz-border-radius: 5;
-  border-radius: 5px;
-  font-family: Arial;
-  color: #fff;
-  font-size: 20px;
-  background: #e98300;
-  padding: 10px 20px 10px 20px;
-  text-decoration: none;
-}
-
-.inn-btn-login:hover {
-  color: #fff;
-  background: #f3ac6f;
-  background-image: -webkit-linear-gradient(top, #f3ac6f, #e98300);
-  background-image: -moz-linear-gradient(top, #f3ac6f, #e98300);
-  background-image: -ms-linear-gradient(top, #f3ac6f, #e98300);
-  background-image: -o-linear-gradient(top, #f3ac6f, #e98300);
-  background-image: linear-gradient(to bottom, #f3ac6f, #e98300);
-  text-decoration: none;
-}
-
 .debugfn {
 	color: #ccc;
 }
@@ -41,4 +18,14 @@
 
 .log_warning {
 	background-color: LightYellow;
+}
+
+.inn-addresscard {
+	border: 2px solid #07c;
+	border-radius: 16px;
+	padding: 20px;
+}
+
+.inn-addresscard li {
+	list-style-type: none;
 }
